make use of generics